--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "dayjs": "^1.8.16",
+    "js-base64": "^2.5.1",
     "js-cookie": "^2.2.1",
     "vant": "^2.2.0"
   }
